# agentFlow

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json  turbo.json
apps/api/: .env.example  Dockerfile  Makefile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py
apps/api/src/agentflow_api/: auth.py  config.py  database.py  logging_config.py  main.py  models.py  run_read.py  schemas.py
apps/api/src/agentflow_api/routers/: agents.py  api_keys.py  companies.py  internal.py  pipelines.py  resources.py  runs.py  triggers.py  ws.py
apps/api/tests/: conftest.py  test_apply.py  test_auth.py  test_companies.py  test_health.py  test_internal.py  test_migrations.py  test_pipeline_execute.py  test_pipelines.py
services/runtime/: .env.example  Dockerfile  pyproject.toml
services/runtime/src/agentflow_runtime/: __init__.py  __main__.py  budget.py  checkpoint.py  dag.py  dead_letter.py  executor.py  healthcheck.py  heartbeat.py  identity.py  lifecycle.py  logging_config.py  pod.py  routing.py  state.py  streaming.py  variables.py
services/runtime/src/agentflow_runtime/nodes/: __init__.py  agent_pod_node.py  base.py  code_node.py  end_node.py  http_node.py  human_input_node.py  if_else_node.py  iteration_node.py  knowledge_retrieval_node.py  llm_node.py  start_node.py  sub_workflow_node.py  template_node.py  variable_aggregator_node.py  (+1 more)
services/runtime/tests/: conftest.py  test_budget.py  test_executor.py  test_healthcheck.py  test_heartbeat.py  test_identity.py  test_state.py  test_streaming.py  test_tasks.py  test_variables.py
services/runtime/tests/nodes/: test_agent_pod_node.py  test_code_node.py  test_external_nodes.py  test_http_node.py  test_human_input_node.py  test_if_else_node.py  test_llm_node.py  test_simple_nodes.py  test_template_node.py  test_variable_nodes.py
(+183 files in other folders)
