[project]
name = "agentflow-runtime"
version = "0.0.1"
description = "AgentFlow runtime — LangGraph DAG engine and AgentPod base"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.59",
    "langchain-core>=0.3.28",
    "langchain-anthropic>=0.3.6",
    "langchain-openai>=0.3.2",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow_runtime"]
