[project]
name = "agentflow-runtime"
version = "0.0.1"
description = "AgentFlow runtime — LangGraph DAG engine and AgentPod base"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.59",
    "langchain-core>=0.3.28",
    "langchain-anthropic>=0.3.6",
    "langchain-openai>=0.3.2",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "fakeredis>=2.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow_runtime"]
